platform-services/observability/kube-prometheus-stack/ingresses.yaml
###################################################################
# Grafana ingress route
###################################################################
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-dashboard
  namespace: monitoring
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`grafana.edgesoft.local`)
    services:
    - name: monitoring-kube-prometheus-stack-grafana
      port: 80

#####################################################################
# Prometheus ingress route
#####################################################################
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`prometheus.edgesoft.local`)
    services:
    - name: monitoring-kube-prometheus-prometheus
      port: 9090
